--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.sagar.ahs">
+    package="com.example.sagar.ahs"
+
+    >
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application
         android:allowBackup="true"
@@ -18,9 +22,7 @@
         <activity
             android:name=".AddNewField"
             android:label="@string/field_adder" />
-        <activity
-            android:name=".AndroidDatabaseManager"
-            android:theme="@style/Theme.AppCompat.Light" />
+
         <activity
             android:name=".homescreenjava"
             android:label="@string/main_page" />
